--- a/src/App.css
+++ b/src/App.css
@@ -11,21 +11,23 @@
   justify-content: center;
   align-items: center;
   /* background-color: rgb(61, 95, 88); */
-  background-image: url(https://www.cambridge.org/elt/blog/wp-content/uploads/2019/02/background-3268840_1920.jpg);
+  background-image: url(https://mocah.org/thumbs/5315561-abstract-texture-sky-sunset-red-cloud-silhouette-outdoor-mountain-tree-sunrise-orange-cloudscape-color-colour-wallpaper-colorful-milky-way-lunar-sun-public-domain-images.jpg);
   background-size: cover;
 }
 
 .weather-card{
-  color: #fff;
+  color: rgba(255, 255, 255, 0.9);
   width: 500px;
   height: 500px;
   /* background-color: rgb(89, 184, 152); */
-  background-color: rgba(89, 184, 152, 0.85);
+  /* background-color: rgba(89, 184, 152, 0.85); */
+  background-color: rgba(71, 162, 167, 0.712);
   border-radius: 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-evenly;
+  box-shadow: 2px 2px 8px rgba(51, 51, 51, 0.746);
 }
 
 .weather-card>h2{
@@ -42,6 +44,7 @@
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr 1fr;
   align-items: start;
+  column-gap: 40px;
 }
 
 
@@ -86,4 +89,5 @@
   font-size: 15px;
   font-weight: 200;
   font-family: Arial, Helvetica, sans-serif;
+  box-shadow: 2px 2px 8px rgba(51, 51, 51, 0.746);
 }
