--- a/src/App.css
+++ b/src/App.css
@@ -91,3 +91,17 @@
   font-family: Arial, Helvetica, sans-serif;
   box-shadow: 2px 2px 8px rgba(51, 51, 51, 0.746);
 }
+
+@media only screen and (max-width: 500px){
+  .App{
+    background-color: #fff;
+    width: 100vw;
+    background-image: none;
+    background-color: rgb(89, 184, 152);
+  }
+
+  .weather-card{
+    max-width: 500px;
+    max-height: 500px;
+  }
+}
